--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.9"
 dependencies = [
     "numpy>=2.0.2",
     "pandas>=2.3.1",
+    "pytest>=8.4.1",
     "pyyaml>=6.0.2",
 ]
