--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "lbp-package"
 version = "0.1.0"
@@ -10,3 +14,7 @@ dependencies = [
     "pytest>=8.4.1",
     "pyyaml>=6.0.2",
 ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["lbp_package*"]
