--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pandas>=2.3.1",
     "pytest>=8.4.1",
     "pyyaml>=6.0.2",
+    "scikit-learn>=1.6.1",
 ]
 
 [tool.setuptools.packages.find]
