--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "numpy>=2.0.2",
     "pandas>=2.3.1",
     "pytest>=8.4.1",
+    "scikit-learn>=1.6.1",
 ]
 
 [tool.setuptools.packages.find]
