--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pandas>=2.3.1",
     "pytest>=8.4.1",
     "scikit-learn>=1.6.1",
+    "scikit-optimize>=0.10.2",
 ]
 
 [tool.setuptools.packages.find]
