--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,23 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "lbp-package"
-version = "1.0.0"
-description = "Add your description here"
+name = "pred-fab"
+version = "0.1.0"
+description = "PFAB: A Predictive Layer for Digital Fabrication Systems"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "numpy>=2.0.2",
     "pandas>=2.3.1",
-    "pytest>=8.4.1",
     "scikit-learn>=1.6.1",
     "scikit-optimize>=0.10.2",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.4.1",
+]
+
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["lbp_package*"]
+include = ["pred_fab*"]
