--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.9"
 dependencies = [
     "numpy>=2.0.2",
     "pandas>=2.3.1",
+    "pytest>=8.4.1",
     "scikit-learn>=1.6.1",
     "scikit-optimize>=0.10.2",
 ]
